--- a/dl/assets/index.scss
+++ b/dl/assets/index.scss
@@ -44,6 +44,7 @@ ul {
 }
 
 body {
+  overflow: hidden;
   height: 100vh;
   font-family: Poppins, Shabnam, sans-serif;
   font-size: 13px;
@@ -263,6 +264,59 @@ body {
       & > header {
         position: relative;
 
+        #new-btn {
+          position: absolute;
+          right: $gap;
+          top: $gap;
+          //background-color: var(--success);
+          $size: 45px;
+          width: $size;
+          height: $size;
+          line-height: $size;
+          text-align: center;
+          @include border-radius(100%);
+          font-size: 25px;
+
+          a {
+            position: absolute;
+            top: 0;
+            left: 0;
+            display: inline-block;
+            width: 100%;
+            height: 100%;
+            @include border-radius(100%);
+            z-index: 100;
+            color: white;
+          }
+
+          &:before {
+            content: "";
+            position: relative;
+            display: block;
+            width: 300%;
+            height: 300%;
+            margin-left: -100%;
+            margin-top: -100%;
+            @include border-radius(100%);
+            background-color: var(--success);
+            animation: pulse-ring 1.25s cubic-bezier(0.215, 0.61, 0.355, 1) infinite;
+          }
+
+          &:after {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: block;
+            width: 100%;
+            height: 100%;
+            background-color: var(--success);
+            @include border-radius(100%);
+            box-shadow: 0 0 8px rgba(0, 0, 0, .3);
+            animation: pulse-dot 1.25s cubic-bezier(0.455, 0.03, 0.515, 0.955) -.4s infinite;
+          }
+        }
+
         #actions {
           position: absolute;
           right: $gap;
@@ -382,7 +436,8 @@ body {
 
             td:nth-child(2) {
               width: 45px;
-              img{
+
+              img {
                 max-width: 100%;
               }
             }
@@ -579,3 +634,23 @@ body {
 }
 
 
+@keyframes pulse-ring {
+  0% {
+    transform: scale(.33);
+  }
+  80%, 100% {
+    opacity: 0;
+  }
+}
+
+@keyframes pulse-dot {
+  0% {
+    transform: scale(.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(.8);
+  }
+}
